feat: add TypeScript tests for Scalus NPM package
  Add Vitest-based TypeScript tests that run during CI and can also be
  used for browser testing. Tests cover applyDataArgToScript, evaluateScript,
  SlotConfig, and evalPlutusScripts APIs.

  - Add runNpmTests sbt task and include it in ci-js alias
  - Update prepareNpmPackage to copy source maps
  - Configure webpack to output scalus.js with proper source map naming
  - Add ignoreWarnings to fix scalajs-bundler Webpack 5 compatibility
  - Create shared test functions usable in both Node.js and browser
  - Update browser tests to use shared test suite

--- a/scalus-cardano-ledger/js/src/main/npm/test-browser.html
+++ b/scalus-cardano-ledger/js/src/main/npm/test-browser.html
@@ -43,13 +43,27 @@
         }
         button:hover { background: #7dd8f5; }
         #results { margin-top: 20px; }
+        .note {
+            background: #2a2a3e;
+            padding: 10px 15px;
+            border-radius: 6px;
+            margin: 10px 0;
+            font-size: 14px;
+        }
     </style>
 </head>
 <body>
     <h1>Scalus Cardano Ledger - Browser Test</h1>
     <p>Open the browser console (F12) for detailed output.</p>
 
+    <div class="note">
+        <strong>Note:</strong> To run the shared test suite, first build it with:
+        <code>npm run build:browser-tests</code>
+    </div>
+
     <button onclick="runAllTests()">Run All Tests</button>
+    <button onclick="runSharedTests()">Run Shared Tests Only</button>
+    <button onclick="runLegacyTests()">Run Legacy Tests Only</button>
     <button onclick="clearResults()">Clear</button>
 
     <div id="results"></div>
@@ -69,6 +83,8 @@
         window.Redeemer = module.exports.Redeemer;
         console.log('Module exports:', module.exports);
     </script>
+    <!-- Load bundled shared tests (built with: npm run build:browser-tests) -->
+    <script src="shared-tests-bundle.js" onerror="console.log('shared-tests-bundle.js not found. Run npm run build:browser-tests to build it.')"></script>
     <script src="test-browser.js"></script>
 </body>
 </html>
